@@ -28,7 +28,6 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
-
             </plugin>
             <plugin>
                 <groupId>io.qameta.allure</groupId>
@@ -41,12 +40,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surfire-plugin.version}</version>
                 <configuration>
-                    <forkCount>3</forkCount>
-                    <reuseForks>false</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
+                    <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
             </plugin>
         </plugins>
